[package]
name = "pingpongkong-k8s-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web Server (Axum) & Async Runtime (Tokio)
axum = "0.8.9"
tokio = { version = "1.52.1", features = ["full"] }

# Serialization (Parsing your YAML ConfigMap)
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Kubernetes API (To convert those "roles" into real IP addresses)
kube = { version = "3.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.1", features = ["v1_31"] }

# Metrics & State Sharing
prometheus = "0.14.0"
lazy_static = "1.5.0"

anyhow = "1.0.102"
surge-ping = "0.8.4"
futures = "0.3.32" # For join_all
